{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 551,
  "lineage": "bedba4a4-76af-8d20-160c-0a5bdbd39585",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/backend-alb/90f9bc9eba8c4682",
            "arn_suffix": "app/backend-alb/90f9bc9eba8c4682",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-backend-alb-588749013.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/backend-alb/90f9bc9eba8c4682",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07b78e5496d38e0b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d7dc7120fb41398"
              },
              {
                "subnet_id": "subnet-09aeb178e9f7deb34"
              }
            ],
            "subnets": [
              "subnet-00d7dc7120fb41398",
              "subnet-09aeb178e9f7deb34"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.private-subnet3",
            "module.vpc.aws_subnet.private-subnet4",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/frontend-alb/ba4ddd49b5631cbf",
            "arn_suffix": "app/frontend-alb/ba4ddd49b5631cbf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-498310809.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/frontend-alb/ba4ddd49b5631cbf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0120b0a5ed6a53ee8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0564db9df60f8e091"
              },
              {
                "subnet_id": "subnet-0d7165807e7595de1"
              }
            ],
            "subnets": [
              "subnet-0564db9df60f8e091",
              "subnet-0d7165807e7595de1"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.externalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:listener/app/backend-alb/90f9bc9eba8c4682/e336633cf554092f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/backend-instances/2cf587d9c7a3b8b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:listener/app/backend-alb/90f9bc9eba8c4682/e336633cf554092f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/backend-alb/90f9bc9eba8c4682",
            "mutual_authentication": [],
            "port": 5050,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb.backend_alb",
            "module.ALB.aws_lb_target_group.backend_target_group",
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.private-subnet3",
            "module.vpc.aws_subnet.private-subnet4",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:listener/app/frontend-alb/ba4ddd49b5631cbf/8d13f8d090521eca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/frontend-instances/4af666c4b53544be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:listener/app/frontend-alb/ba4ddd49b5631cbf/8d13f8d090521eca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/frontend-alb/ba4ddd49b5631cbf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ALB.aws_lb.frontend_alb",
            "module.ALB.aws_lb_target_group.frontend_target_group",
            "module.externalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/backend-instances/2cf587d9c7a3b8b8",
            "arn_suffix": "targetgroup/backend-instances/2cf587d9c7a3b8b8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "5050",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/backend-instances/2cf587d9c7a3b8b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/backend-alb/90f9bc9eba8c4682"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-instances",
            "port": 5050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-instances"
            },
            "tags_all": {
              "Name": "backend-instances"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/frontend-instances/4af666c4b53544be",
            "arn_suffix": "targetgroup/frontend-instances/4af666c4b53544be",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772082485:targetgroup/frontend-instances/4af666c4b53544be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:724772082485:loadbalancer/app/frontend-alb/ba4ddd49b5631cbf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-instances",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend-instances"
            },
            "tags_all": {
              "Name": "frontend-instances"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-0a10545c96bf79092",
            "description": "This is Backend Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a10545c96bf79092",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad6beaa3431384d6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b78e5496d38e0b8"
                ],
                "self": false,
                "to_port": 5050
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BackEnd-SG"
            },
            "tags_all": {
              "Name": "BackEnd-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-003565a8572361519",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-003565a8572361519",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a10545c96bf79092",
            "security_group_rule_id": "sgr-003565a8572361519",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.backend_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backapp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-04cbbf9df12b086bb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5050,
            "id": "sgr-04cbbf9df12b086bb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07b78e5496d38e0b8",
            "security_group_id": "sg-0a10545c96bf79092",
            "security_group_rule_id": "sgr-04cbbf9df12b086bb",
            "tags": null,
            "tags_all": {},
            "to_port": 5050
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_sg.aws_security_group.mySG",
            "module.bastion_sg.aws_security_group.mySG",
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-09b225d78a2d50654",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09b225d78a2d50654",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_id": "sg-0a10545c96bf79092",
            "security_group_rule_id": "sgr-09b225d78a2d50654",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_sg.aws_security_group.mySG",
            "module.bastion_sg.aws_security_group.mySG",
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02457590d33d576c3",
            "arn": "arn:aws:ec2:us-east-1:724772082485:instance/i-0491334e35c84a498",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0491334e35c84a498",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c0f0688ffee9f1a",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-52-207-172-228.compute-1.amazonaws.com",
            "public_ip": "52.207.172.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f332ffed8a3b7c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0564db9df60f8e091",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad6beaa3431384d6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-0ad6beaa3431384d6",
            "description": "This is bastion Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad6beaa3431384d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0916c9569d73baa56",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0916c9569d73baa56",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_rule_id": "sgr-0916c9569d73baa56",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-02934b01cd560cabf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02934b01cd560cabf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_rule_id": "sgr-02934b01cd560cabf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0a0374a4a3dcc12af",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0a0374a4a3dcc12af",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_rule_id": "sgr-0a0374a4a3dcc12af",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0c7fa0a176de57f26",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c7fa0a176de57f26",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_rule_id": "sgr-0c7fa0a176de57f26",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.externalALB_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-0120b0a5ed6a53ee8",
            "description": "This is ExternalALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0120b0a5ed6a53ee8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ExternalALB_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ExternalALB-SG"
            },
            "tags_all": {
              "Name": "ExternalALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.externalALB_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0f721dcc6c9c7558f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f721dcc6c9c7558f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0120b0a5ed6a53ee8",
            "security_group_rule_id": "sgr-0f721dcc6c9c7558f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.externalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.externalALB_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-03fde474399fc2d94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03fde474399fc2d94",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0120b0a5ed6a53ee8",
            "security_group_rule_id": "sgr-03fde474399fc2d94",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.externalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-00093878a33d73365",
            "description": "This is Frontend Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00093878a33d73365",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad6beaa3431384d6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0120b0a5ed6a53ee8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontEnd-SG"
            },
            "tags_all": {
              "Name": "FrontEnd-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0d0ad578f74ec31d4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d0ad578f74ec31d4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00093878a33d73365",
            "security_group_rule_id": "sgr-0d0ad578f74ec31d4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.frontend_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-076ebab52a8195fb0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-076ebab52a8195fb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0120b0a5ed6a53ee8",
            "security_group_id": "sg-00093878a33d73365",
            "security_group_rule_id": "sgr-076ebab52a8195fb0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.externalALB_sg.aws_security_group.mySG",
            "module.frontend_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0c65dee88458ca699",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c65dee88458ca699",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ad6beaa3431384d6",
            "security_group_id": "sg-00093878a33d73365",
            "security_group_rule_id": "sgr-0c65dee88458ca699",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.mySG",
            "module.externalALB_sg.aws_security_group.mySG",
            "module.frontend_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.internalALB_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-07b78e5496d38e0b8",
            "description": "This is InternalALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b78e5496d38e0b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00093878a33d73365"
                ],
                "self": false,
                "to_port": 5050
              }
            ],
            "name": "InternalALB_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InternalALB-SG"
            },
            "tags_all": {
              "Name": "InternalALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internalALB_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0c72130e072978ec1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c72130e072978ec1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07b78e5496d38e0b8",
            "security_group_rule_id": "sgr-0c72130e072978ec1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.internalALB_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0b4d4ecf03598f981",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5050,
            "id": "sgr-0b4d4ecf03598f981",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00093878a33d73365",
            "security_group_id": "sg-07b78e5496d38e0b8",
            "security_group_rule_id": "sgr-0b4d4ecf03598f981",
            "tags": null,
            "tags_all": {},
            "to_port": 5050
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.frontend_sg.aws_security_group.mySG",
            "module.internalALB_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group/sg-004fac7426dfcd00e",
            "description": "This is RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004fac7426dfcd00e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a10545c96bf79092"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "724772082485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-0d7975a9c28191dfb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d7975a9c28191dfb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-004fac7426dfcd00e",
            "security_group_rule_id": "sgr-0d7975a9c28191dfb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:security-group-rule/sgr-02be76be3d402c537",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-02be76be3d402c537",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a10545c96bf79092",
            "security_group_id": "sg-004fac7426dfcd00e",
            "security_group_rule_id": "sgr-02be76be3d402c537",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_sg.aws_security_group.mySG",
            "module.rds_sg.aws_security_group.mySG",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a98413f6727d1d5e",
            "arn": "arn:aws:ec2:us-east-1:724772082485:elastic-ip/eipalloc-0a98413f6727d1d5e",
            "association_id": "eipassoc-0be6b524b8edf7872",
            "domain": "vpc",
            "id": "eipalloc-0a98413f6727d1d5e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d026ca3032a4f5f3",
            "private_dns": "ip-10-0-2-251.ec2.internal",
            "private_ip": "10.0.2.251",
            "public_dns": "ec2-52-22-250-108.compute-1.amazonaws.com",
            "public_ip": "52.22.250.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployment": "Terraform",
              "Name": "SEIF-nat-eIP"
            },
            "tags_all": {
              "Deployment": "Terraform",
              "Name": "SEIF-nat-eIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:internet-gateway/igw-0a7751f14d2fe74fc",
            "id": "igw-0a7751f14d2fe74fc",
            "owner_id": "724772082485",
            "tags": {
              "Name": "SEIF-IGW"
            },
            "tags_all": {
              "Name": "SEIF-IGW"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a98413f6727d1d5e",
            "association_id": "eipassoc-0be6b524b8edf7872",
            "connectivity_type": "public",
            "id": "nat-0643a999aa38b7fbd",
            "network_interface_id": "eni-0d026ca3032a4f5f3",
            "private_ip": "10.0.2.251",
            "public_ip": "52.22.250.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7165807e7595de1",
            "tags": {
              "Deployment": "Terraform",
              "Name": "SEIF-NAT-GW"
            },
            "tags_all": {
              "Deployment": "Terraform",
              "Name": "SEIF-NAT-GW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat-eIP",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "NAT_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032b8c648884164f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0643a999aa38b7fbd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032b8c648884164f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat-eIP",
            "module.vpc.aws_nat_gateway.NAT-GW",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a7751f14d2fe74fc",
            "id": "r-rtb-05545bc86253a75541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05545bc86253a7554",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:route-table/rtb-032b8c648884164f9",
            "id": "rtb-032b8c648884164f9",
            "owner_id": "724772082485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0643a999aa38b7fbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT"
            },
            "tags_all": {
              "Name": "PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:route-table/rtb-05545bc86253a7554",
            "id": "rtb-05545bc86253a7554",
            "owner_id": "724772082485",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7751f14d2fe74fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069cf25ab304a3432",
            "route_table_id": "rtb-032b8c648884164f9",
            "subnet_id": "subnet-09aeb178e9f7deb34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet3",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b584a07fcc83db2b",
            "route_table_id": "rtb-032b8c648884164f9",
            "subnet_id": "subnet-00d7dc7120fb41398"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet4",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c1c76631e249130",
            "route_table_id": "rtb-032b8c648884164f9",
            "subnet_id": "subnet-0092bedc268e3ec84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet5",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4eff19cc8af905b",
            "route_table_id": "rtb-032b8c648884164f9",
            "subnet_id": "subnet-0399a5bbf9c741013"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private-subnet6",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f724c386c1d6b124",
            "route_table_id": "rtb-05545bc86253a7554",
            "subnet_id": "subnet-0564db9df60f8e091"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50b49103e7af3a2",
            "route_table_id": "rtb-05545bc86253a7554",
            "subnet_id": "subnet-0d7165807e7595de1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-09aeb178e9f7deb34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aeb178e9f7deb34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet3"
            },
            "tags_all": {
              "Name": "Private-Subnet3"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-00d7dc7120fb41398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d7dc7120fb41398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet4"
            },
            "tags_all": {
              "Name": "Private-Subnet4"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-0092bedc268e3ec84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092bedc268e3ec84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet5"
            },
            "tags_all": {
              "Name": "Private-Subnet5"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-0399a5bbf9c741013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0399a5bbf9c741013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet6"
            },
            "tags_all": {
              "Name": "Private-Subnet6"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-0564db9df60f8e091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564db9df60f8e091",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet1"
            },
            "tags_all": {
              "Name": "Public-Subnet1"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:subnet/subnet-0d7165807e7595de1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7165807e7595de1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724772082485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet2"
            },
            "tags_all": {
              "Name": "Public-Subnet2"
            },
            "vpc_id": "vpc-0dcbbf9d239e9dde7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.YAKOUT-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "YAKOUT-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772082485:vpc/vpc-0dcbbf9d239e9dde7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0929edf79d24de44a",
            "default_route_table_id": "rtb-0bcff44b45b3e33b7",
            "default_security_group_id": "sg-02e78e5241c3780a0",
            "dhcp_options_id": "dopt-0752c090f1368c13c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcbbf9d239e9dde7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcff44b45b3e33b7",
            "owner_id": "724772082485",
            "tags": {
              "Name": "SEIF-VPC"
            },
            "tags_all": {
              "Name": "SEIF-VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}